fix(footer, valign): fix valign on logos, make footer sticky properly

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -55,6 +55,13 @@ a:visited {
   width: 100%;
   text-align: center;
   padding-top: 50px;
+
+  min-height: 100%;
+}
+
+#wrapper:after {
+  content: "";
+  display: block;
 }
 
 .center {
@@ -106,8 +113,7 @@ a:visited {
 
 #connect_pane {
   clear: both;
-  padding-top: 40px;
-  padding-bottom: 20px;
+  padding: 50px;
   max-width: 500px;
 }
 
@@ -126,16 +132,16 @@ a:visited {
 }
 
 #credit {
-  position: absolute;
-  right: 0;
-  bottom: 0;
+  text-align: right;
+}
+
+#credit_contents {
   padding: 10px;
+  display: inline-block;
 }
 
 #credit_bg {
   position: absolute;
-  right: 0;
-  bottom: 0;
   padding: 10px;
   background: #000;
   opacity: .3;
@@ -160,7 +166,7 @@ a:visited {
     *zoom: 1;
 }
 
-/* valign top */
+/* valign */
 
 .align_top {
   vertical-align: top;
@@ -171,4 +177,15 @@ a:visited {
     display: inline-block;
     height: 100%;
     vertical-align: top;
+}
+
+.align_mid {
+  vertical-align: middle;
+}
+
+.align_top:before {
+    content: "";
+    display: inline-block;
+    height: 100%;
+    vertical-align: middle;
 }
